--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "@types/react-dom": "18.2.5",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.6",
-    "next": "13.4.6",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "next": "^13.4.6",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "typescript": "5.1.3"
   },
   "devDependencies": {
