--- a/package.json
+++ b/package.json
@@ -11,18 +11,24 @@
   "dependencies": {
     "@geist-ui/core": "^2.3.8",
     "@geist-ui/icons": "^1.0.2",
+    "@nextui-org/react": "^1.0.0-beta.13",
+    "@observablehq/plot": "^0.6.8",
+    "@observablehq/plot-vertical-bars": "https://api.observablehq.com/@observablehq/plot-vertical-bars.tgz?v=3",
+    "@observablehq/runtime": "^5.8.1",
     "@prisma/client": "^4.15.0",
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
-    "eslint": "8.43.0",
-    "eslint-config-next": "13.4.6",
+    "d3": "^7.8.5",
+    "eslint": "^7.32.0",
+    "eslint-config-next": "^12.0.4",
     "next": "13.4.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.1.3"
   },
   "devDependencies": {
+    "@types/d3": "^7.4.0",
     "prisma": "^4.15.0"
   }
 }
