--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next": "13.4.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-select": "^5.7.3",
     "typescript": "5.1.3"
   },
   "devDependencies": {
