--- a/package.json
+++ b/package.json
@@ -19,16 +19,19 @@
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
+    "bcryptjs": "^2.4.3",
     "d3": "^7.8.5",
     "eslint": "^7.32.0",
     "eslint-config-next": "^12.0.4",
     "next": "13.4.6",
+    "next-auth": "^4.22.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-select": "^5.7.3",
     "typescript": "5.1.3"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/d3": "^7.4.0",
     "prisma": "^4.16.1"
   }
