--- a/package.json
+++ b/package.json
@@ -22,14 +22,19 @@
     "d3": "^7.8.5",
     "eslint": "^7.32.0",
     "eslint-config-next": "^12.0.4",
+    "leaflet": "^1.9.4",
+    "leaflet-defaulticon-compatibility": "^0.1.2",
+    "leaflet-geosearch": "^3.8.0",
     "next": "13.4.6",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
     "react-select": "^5.7.3",
     "typescript": "5.1.3"
   },
   "devDependencies": {
     "@types/d3": "^7.4.0",
+    "@types/leaflet": "^1.9.3",
     "prisma": "^4.16.1"
   }
 }
